# aegis

./: AGENTS.md  CMakeLists.txt
scripts/: compile.sh
src/: main.cpp
src/aegis/config/: config.cpp  config.hpp
src/aegis/logging/: logging.cpp  logging.hpp
